--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/icons/cierneMenu.svg
     - assets/images/
 
   # To add assets to your application, add an assets section, like this:
