--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   geolocator: ^10.1.0
   firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   shared_preferences: ^2.2.2
 
